<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Theme.AppCompat.NoActionBar">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/title_main" />

    <android.support.v7.widget.CardView
        android:layout_below="@+id/tv_title"
        android:id="@+id/cv_category_speed"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/category_speed_image"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_rounder_yellow"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:background="@color/white80" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:text="@string/category_name_speed" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/cv_category_speed"
        android:id="@+id/cv_category_filtered"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/category_filtered_image"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_rounder_red"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:background="@color/white80" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:text="@string/category_name_filtered" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@id/cv_category_filtered"
        android:id="@+id/cv_category_random"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/category_random_image"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_rounder_green"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:background="@color/white80" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:text="@string/category_name_random" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>